# esp32-javascript

./: .eslintrc.js  .gitignore  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  api.md  babel.config.json  package-lock.json  package.json  partitions.csv  partitions2MB.csv  partitions4MB.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  sdkconfig.old2  sdkconfig.old3  tsconfig.json
.github/workflows/: ci.yml
components/arduino-esp32/: CMakeLists.txt  component.mk  esp32-hal-spi.c
components/arduino-spi/: CMakeLists.txt
components/arduino-wire/: Wire.cpp
components/duk-module-node/: CMakeLists.txt  component.mk  duk_module_load_bindings.c  duk_module_node.c  loader.js
components/duktape/: CMakeLists.txt  duk_source_meta.json  duktape.c
components/esp32-javascript/: CMakeLists.txt  Kconfig  Makefile.projbuild  tcp.cpp  (+5 more)
docs/: README.md  globals.html  index.html
examples/: ledc-example.js  main.js.flash  main.js.serverSocket  main.js_blink  main.js_nonblockingserver  main.js_socketclient  main.js_testscript  repl.js  stress.js
main/: CMakeLists.txt  component.mk  config.js  duktape.c  duktape.h  esp32.js  esp32.js_testserver  eventloop.hex  eventloop.js  hello_world_main.c  lora.cpp  lora.h  main.c  main.cpp  main.h  main.hex  main.js  main.js.serverSocket  main.js_nonblockingserver  main.js_old  main.js_testscript  tcp.c  tcp.cpp  tcp.h
main/boot-js/: boot.js  config.js  configserver.js  eventloop.js  http.js
main/include/: esp32-javascript-config.h
scripts/: copy-modules.sh  generate-api-doc.sh
tools/: Dockerfile  build.sh  install-node.sh
(+147 files in other folders)
